@@ -7,6 +7,7 @@ Additions:
 
    * Focus can be moved in all directions by elm_widget_focus_go function.
    * Reload theme when it change on disk.
+   * Fileselector: Add a wheel spinner that show/spin while EIO is working
 
 Fixes:
 
